# DeepSearch_agent

./: .env  README.md  app.py  app_runner.py  cli.py  config.py  main.py  models.py  pyproject.toml  run_app.py  run_server.py
agents/: __init__.py  drafting_agent.py  research_agent.py
results/drafts/: who_is_narendra_modi_20250421_205945.md
results/research/: who_is_narendra_modi_20250421_205945.json
static/css/: style.css
templates/: base.html  history.html  index.html  results.html
utils/: __init__.py  file_utils.py  logging_utils.py  tavily_tools.py
workflows/: __init__.py  research_workflow.py
